Scrollbars fix... Separated & styled "scrollbar junction" code...

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -2014,21 +2014,29 @@ GtkLevelBar.vertical {
     padding: 0;
 }
 
-.scrollbars-junction,
+
 .scrollbar.trough,
 .scrollbar.trough.vertical {
-    border-width: 0;
+    border-width: 0 0 0 1px;
+	border-color: shade(@theme_bg_color, 1.05);
     border-radius: 0;
     background-image: linear-gradient(to right,
                                       shade(@theme_bg_color, 1.1),
-                                      shade(@theme_bg_color, 1.3)
+                                      shade(@theme_bg_color, 1.2)
                                       );
+}
+
+.scrollbars-junction {
+    background-image: -gtk-gradient(linear,
+									left top, right bottom,
+                                      from(shade(@theme_bg_color, 1.05)),
+                                      to(shade(@theme_bg_color, 1.2)));
 }
 
 .scrollbar.trough.horizontal {
     background-image: linear-gradient(to bottom,
                                       shade(@theme_bg_color, 1.1),
-                                      shade(@theme_bg_color, 1.3)
+                                      shade(@theme_bg_color, 1.2)
                                       );
 }
 
@@ -2040,8 +2048,8 @@ GtkLevelBar.vertical {
     border-color: shade(@theme_selected_bg_color, 1.0);
     border-radius: 3px;
     background-image: linear-gradient(to right,
-                                      shade(shade(@theme_bg_color, 0.9), 1.2),
-                                      shade(shade(@theme_bg_color, 0.9), 1.15)
+                                      shade(shade(@theme_bg_color, 0.9), 1.3),
+                                      shade(shade(@theme_bg_color, 0.9), 1.05)
                                       );
 
     color: shade(@theme_bg_color, 0.6);
@@ -2050,23 +2058,23 @@ GtkLevelBar.vertical {
 .scrollbar.slider.horizontal,
 .scrollbar.button.horizontal {
     background-image: linear-gradient(to bottom,
-                                      shade(shade(@theme_bg_color, 0.9), 1.2),
-                                      shade(shade(@theme_bg_color, 0.9), 1.15)
+                                      shade(shade(@theme_bg_color, 0.9), 1.3),
+                                      shade(shade(@theme_bg_color, 0.9), 1.05)
                                       );
 }
 
 .scrollbar.slider:hover,
 .scrollbar.slider.vertical:hover {
     background-image: linear-gradient(to right,
-                                      shade(shade(@theme_bg_color, 0.8), 1.2),
-                                      shade(shade(@theme_bg_color, 0.8), 1.15)
+                                      shade(shade(@theme_bg_color, 0.87), 1.3),
+                                      shade(shade(@theme_bg_color, 0.87), 1.05)
                                       );
 }
 
 .scrollbar.slider.horizontal:hover {
     background-image: linear-gradient(to bottom,
-                                      shade(shade(@theme_bg_color, 0.8), 1.2),
-                                      shade(shade(@theme_bg_color, 0.8), 1.15)
+                                      shade(shade(@theme_bg_color, 0.87), 1.3),
+                                      shade(shade(@theme_bg_color, 0.87), 1.05)
                                       );
 }
 
